[gd_scene load_steps=10 format=2]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]
[ext_resource path="res://piste/piste.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=17]
font_path = "res://font/Angellya.ttf"

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = SubResource( 17 )

[sub_resource type="SpatialMaterial" id=18]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=14]
material = SubResource( 18 )
size = Vector3( 1.5, 0.5, 0.2 )

[sub_resource type="BoxShape" id=15]
extents = Vector3( 0.75, 0.25, 0.1 )

[sub_resource type="DynamicFontData" id=19]
font_path = "res://font/Angellya.ttf"

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = SubResource( 19 )

[node name="menu" type="Spatial"]
script = ExtResource( 1 )

[node name="Spatial" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, -0.5 )
pixel_size = 0.0168
modulate = Color( 1, 0, 0, 1 )
text = "Guitar Hero"
font = SubResource( 12 )

[node name="Label3D2" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 1.6, -0.5 )
pixel_size = 0.02
modulate = Color( 0, 0.368627, 1, 1 )
text = "godot"
uppercase = true

[node name="StaticBody" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 15 )

[node name="Label3D3" type="Label3D" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0.11 )
pixel_size = 0.0168
text = "Play"
font = SubResource( 16 )
uppercase = true

[node name="StaticBody2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 15 )

[node name="Label3D4" type="Label3D" parent="StaticBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.425, 1.575, 0.11 )
pixel_size = 0.0168
text = "option"
font = SubResource( 16 )
uppercase = true

[node name="StaticBody3" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 15 )

[node name="Label3D5" type="Label3D" parent="StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.45, 1.575, 0.11 )
pixel_size = 0.0168
text = "exit"
font = SubResource( 16 )
uppercase = true

[connection signal="mouse_entered" from="StaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody" to="." method="_on_StaticBody_mouse_exited"]
[connection signal="mouse_entered" from="StaticBody2" to="." method="_on_StaticBody2_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2" to="." method="_on_StaticBody2_mouse_exited"]
[connection signal="mouse_entered" from="StaticBody3" to="." method="_on_StaticBody3_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody3" to="." method="_on_StaticBody3_mouse_exited"]
